--- a/style.css
+++ b/style.css
@@ -19,8 +19,6 @@ body {
   background-color: var(--primary-white);
   display: flex;
   flex-direction: column;
-  gap: 50px;
-  overflow: hidden;
 }
 
 .player-container {
@@ -35,19 +33,24 @@ body {
 }
 
 .player-name {
-  font-size: 2.25rem;
+  font-size: 3rem;
 }
 
 .player-score {
-  font-size: 1.75rem;
+  font-size: 2.25rem;
+}
+
+.message-container {
+  text-align: center;
+  font-size: 1.5rem;
 }
 
 .board {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
-  height: 275px;
-  width: 275px;
+  height: 350px;
+  width: 350px;
   margin: 30px auto;
 }
 
@@ -57,7 +60,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 3.5rem;
+  font-size: 5rem;
 }
 
 .box:nth-child(1),
